# advent-of-code-rust

./: Cargo.toml  README.md
data/: bonus_01.txt  bonus_01_example.txt
src/: days.rs  lib.rs  main.rs
src/days/: bonus_01.rs  day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  template.rs
