[package]
name = "advent_of_code_2022"
authors = ["Benoît Daene <benoitdaene@gmail.com>"]
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
itertools = "0.10.5"
nom = "7.1.3"
num = "0.4.0"
